--- a/config.yaml
+++ b/config.yaml
@@ -48,19 +48,21 @@ tools:
     - helm
     - jq
     - kubernetes-cli
+    - ollama
     - oh-my-posh
     - terraform
     - volta
     - yq
   cask:
-    - carbon-copy-cloner
+    - carbon-copy-cloner # just testing
     - claude
     - iterm2
     - dropbox
     - firefox
-    - font-hack-nerd-font
-    - powershell
-    - visual-studio-code@insiders
+    - font-hack-nerd-font # used for terminal and vscode
+    - powershell # yet to add oh-my-posh as we already have for zsh
+    - visual-studio-code # intent is to add plugins/setting via another module
+    - visual-studio-code@insiders # intent is to add plugins/setting via another module
 
 # Aliases
 aliases:
