docs: Revise README for clarity and update features; add backup and restore section

--- a/dev/proposed-config.yml
+++ b/dev/proposed-config.yml
@@ -1,5 +1,7 @@
 # Dotfiles Configuration
 
+# Future, not implemented yet.
+
 # Master Switches
 enable_preferences: false      # System preferences and defaults
 enable_tools: true             # CLI and GUI tools installation
