"refactor!: rename project from dotfiles to cops" -m "- Rename all instances of 'dotfiles' to 'cops' (case-sensitive)" -m "- Update file names and paths:" -m "  * dotfiles-setup.sh → cops-setup.sh" -m "  * dotfiles-restore.sh → cops-restore.sh" -m "- Update environment variables (DOTFILES_ROOT → COPS_ROOT)" -m "- Update documentation and configuration files" -m "- Maintain existing functionality, only changing naming" -m "BREAKING CHANGE: This renames the entire project from dotfiles to cops. All paths, variables, and file names have changed."

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: macOS Dotfiles Test
+name: macOS Cops Test
 
 on:
   # push:
@@ -18,6 +18,6 @@ jobs:
       # Not recommended for normal use!
       - name: Test repeated installations
         run: |
-          ./dotfiles-setup.sh --auto-agree
-          ./dotfiles-setup.sh --auto-agree
-          ./dotfiles-setup.sh --auto-agree
+          ./cops-setup.sh --auto-agree
+          ./cops-setup.sh --auto-agree
+          ./cops-setup.sh --auto-agree
