feat: add workflow to capture virgin macOS zshrc and document default shell configurations

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ Icon
 .history/
 _github/
 _codemaps/
-archive/
+.archive/
 
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
