--- a/.github/workflows/capture-virgin-configs.yml
+++ b/.github/workflows/capture-virgin-configs.yml
@@ -67,9 +67,12 @@ jobs:
 
       - name: Create commit and push
         run: |
+          # Generate unique branch name with timestamp
+          BRANCH_NAME="capture-virgin-configs-$(date +%Y%m%d-%H%M%S)"
+
           git add config/virgin/
           git commit -m "chore: capture virgin macOS configs"
-          git push origin HEAD:capture-virgin-configs
+          git push origin HEAD:"$BRANCH_NAME"
 
       - name: Create PR
         env:
@@ -79,4 +82,4 @@ jobs:
             --title "chore: capture complete set of virgin macOS configs" \
             --body "Automated PR to capture virgin macOS configurations" \
             --base main \
-            --head capture-virgin-configs
+            --head "$BRANCH_NAME"
