--- a/.github/workflows/capture-virgin-configs.yml
+++ b/.github/workflows/capture-virgin-configs.yml
@@ -76,11 +76,10 @@ jobs:
           git push origin HEAD:"$BRANCH_NAME"
 
       - name: Create PR
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh pr create \
-            --title "chore: capture complete set of virgin macOS configs" \
-            --body "Automated PR to capture virgin macOS configurations" \
-            --base main \
-            --head "$BRANCH_NAME"
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: "chore: capture complete set of virgin macOS configs"
+          body: "Automated PR to capture virgin macOS configurations"
+          branch: "${{ env.BRANCH_NAME }}"
+          base: main
