--- a/config.yaml
+++ b/config.yaml
@@ -101,6 +101,7 @@ tools:
     - kubernetes-cli
     - lua
     - lynx
+    - mpv
     - moreutils
     - oh-my-posh
     - openssh
@@ -108,6 +109,7 @@ tools:
     - php
     - pigz
     - pkgconf
+    - portaudio
     - pv
     - rename
     - rlwrap
